--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     <style> .glyphicon-thumbs-up { cursor:pointer } </style>
   </head>
   <body ng-app="cleannote" ng-controller="MainCtrl">
+
     <nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">
       <ul class="nav navbar-nav">
 	<li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
@@ -19,172 +20,15 @@
 	<li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
       </ul>
     </nav>
+
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
 	<ui-view></ui-view>
       </div>
     </div>
-    <script type="text/ng-template" id="/home.html">
-      <div class="page-header">
-	<h1>CleanNote</h1>
-      </div>
-      <h2>- Sections -</h2>
-      <div ng-repeat="section in sections">
-	<span ng-show="section.selected" class="glyphicon glyphicon-ok"></span>
-	<a href="#/home?sectionId={{section._id}}">{{section.course_id}}{{section.section_id}} -  {{section.course_name}}</a>
-	<a href="#/sections/{{section._id}}" ng-show="section.manage_authorized" class="glyphicon glyphicon-pencil"></a>
-      </div>
-      <form ng-submit="addSection()" style="margin-top:30px;">
-	<h3>Add a new Section</h3>
-	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="Course Id" ng-model="course_id"></input>
-	</div>
-	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="Section Id" ng-model="section_id"></input>
-	</div>
-	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="Semester" ng-model="semester"></input>
-	</div>
-	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="Year" ng-model="year"></input>
-	</div>
-	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="Course Name" ng-model="course_name"></input>
-	</div>
-	<button type="submit" class="btn btn-primary">Add</button>
-      </form>
-      <hr>
-      <h2> - Cards - </h2>
-      <div ng-repeat="card in cards" style="margin-top:20px;">
-	<h3>
-	  {{card.title}}
-	</h3>
-	<p>
-	{{card.content}}
-	</p>
-	<span>
-	  <a href="#/cards/{{card._id}}">Comments</a>
-	</span>
-      </div>
-      <form ng-submit="addCards()" style="margin-top:30px;">
-	<h3>Add a new Card</h3>
-	<div class="form-group">
-	  <label for="typeSelect">Type : </label><br>
-	  <select name="typeSelect" ng-model="card_type">
-	    <option value="announcement">announcement</option>
-	    <option value="assignment">assignment</option>
-	    <option value="grade">grade</option>
-	    <option value="discussion">discussion</option>
-	  </select><br>
-	</div>
-	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="Card Title" ng-model="card_title"></input>
-	</div>
-	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="Card Content" ng-model="card_content"></input>
-	</div>
-	<button type="submit" class="btn btn-primary">Add</button>
-      </form>
-      <hr>
-      <h2>- Todo -</h2>
-      <div ng-repeat="todo in todos | orderBy:'done'" style="margin-top:20px;">
-	<h4>
-          <span ng-hide="todo.done" class="glyphicon glyphicon-unchecked" ng-click="finishTask(todo)"></span>
-          <span ng-show="todo.done" class="glyphicon glyphicon-ok" ng-click="undoTask(todo)"></span>
-	  {{ todo.task }}
-	</h4>
-      </div>
-      <form ng-submit="addTodo()" style="margin-top:30px;">
-	<h3>Add a new Todo</h3>
-	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="Todo" ng-model="todo_task"></input>
-	</div>
-	<button type="submit" class="btn btn-primary">Add</button>
-      </form>
-    </script>
-    <script type="text/ng-template" id="/cards.html">
-      <div class="page-header">
-	<h3>
-	  {{card.title}}
-	</h3>
-	<p style="font-size:20px; padding=5px;">{{card.content}}</p>
-      </div>
 
-      <div ng-repeat="comment in card.comments">
-	<span style="font-size:20px; margin-left:10px;">{{comment.body}}</spsan> - {{comment.author}}
-      </div>
-      <form ng-submit="addComment()"
-	    style="margin-top:30px;">
-	<h3>Add a new comment</h3>
-	<div class="form-group">
-	  <input type="text"
-		 class="form-control"
-		 placeholder="Comment"
-		 ng-model="body"></input>
-	</div>
-	<button type="submit" class="btn btn-primary">Post</button>
-      </form>
-    </script>
-    <script type="text/ng-template" id="/register.html">
-      <div class="page-header">
-	<h1>CleanNote</h1>
-      </div>
-      <div ng-show="error" class="alert alert-danger row">
-	<span>{{ error.message }}</span>
-      </div>
-      <form ng-submit="register()"
-	    style="margin-top:30px;">
-	<h3>Register</h3>
-	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="User ID" ng-model="user.user_id"></input>
-	</div>
-	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="Username" ng-model="user.username"></input>
-	</div>
-	<div class="form-group">
-	  <input type="password" class="form-control" placeholder="Password" ng-model="user.password"></input>
-	</div>
-	<button type="submit" class="btn btn-primary">Register</button>
-      </form>
-    </script>
-    <script type="text/ng-template" id="/login.html">
-      <div class="page-header">
-	<h1>CleanNote</h1>
-      </div>
-      <div ng-show="error" class="alert alert-danger row">
-	<span>{{ error.message }}</span>
-      </div>
-      <form ng-submit="logIn()" style="margin-top:30px;">
-	<h3>Log In</h3>
-	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="User ID" ng-model="user.user_id"></input>
-	</div>
-	<div class="form-group">
-	  <input type="password" class="form-control" placeholder="Password" ng-model="user.password"></input>
-	</div>
-	<button type="submit" class="btn btn-primary">Log In</button>
-      </form>
-    </script>
-    <script type="text/ng-template" id="/sections.html">
-      <div class="page-header">
-	<h1>{{ section.course_id }}{{ section.section_id }} - {{ section.course_name }}</h1>
-	<h2>- Students -</h2>
-	<div ng-repeat="student in manager.students">
-	  {{ student.user_id }} {{ student.username }}
-	</div>
-	<h2>- Instructors -</h2>
-	<div ng-repeat="instructor in manager.instructors">
-	  {{ instructor.user_id }} {{ instructor.username }}
-	</div>
-	<h2>- Managers -</h2>
-	<div ng-repeat="manager in section.managers">
-	  {{ manager.user_id }} {{ manager.username }}
-	</div>
-      </div>
-    </script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="js/app.js"></script>
+    <script src="./js/bundled.js"></script>
   </body>
 </html>
