--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>CleanNote</title>
-    <!-- styles -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
+    <!-- inject:css -->
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="bower_components/angular/angular-csp.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <!-- endinject -->
     <style> .glyphicon-thumbs-up { cursor:pointer } </style>
   </head>
   <body ng-app="cleannote" ng-controller="MainCtrl">
@@ -26,9 +31,14 @@
 	<ui-view></ui-view>
       </div>
     </div>
-
+    <!-- bower:js -->
+    <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="./js/bundled.js"></script>
+    <!-- endinject -->
+    <!-- inject:js -->
+    <script src="js/app.js"></script>
+    <!-- endinject -->
   </body>
 </html>
