--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,15 @@
     <!-- endinject -->
     <!-- inject:js -->
     <script src="js/app.js"></script>
+    <script src="js/controllers/auth.js"></script>
+    <script src="js/controllers/cards.js"></script>
+    <script src="js/controllers/main.js"></script>
+    <script src="js/controllers/nav.js"></script>
+    <script src="js/controllers/section.js"></script>
+    <script src="js/services/auth.js"></script>
+    <script src="js/services/cards.js"></script>
+    <script src="js/services/sections.js"></script>
+    <script src="js/services/todos.js"></script>
     <!-- endinject -->
   </body>
 </html>
