--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="bower_components/angular/angular-csp.css">
+    <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
@@ -31,12 +32,15 @@
 	<ui-view></ui-view>
       </div>
     </div>
+
     <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <!-- endinject -->
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- inject:js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/auth.js"></script>
@@ -48,6 +52,7 @@
     <script src="js/services/cards.js"></script>
     <script src="js/services/sections.js"></script>
     <script src="js/services/todos.js"></script>
+    <script src="js/services/users.js"></script>
     <!-- endinject -->
   </body>
 </html>
