--- a/client/index.html
+++ b/client/index.html
@@ -6,38 +6,46 @@
     <meta name="author" content="">
     <title>CleanNote</title>
     <!-- inject:css -->
-    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="bower_components/angular/angular-csp.css">
     <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- endinject -->
     <style> .glyphicon-thumbs-up { cursor:pointer } </style>
   </head>
-  <body ng-app="cleannote" ng-controller="MainCtrl" >
-
-    <nav class="nav navbar-fixed-top" ng-controller="NavCtrl">
-    <div>
-     <div class="navbar-header">
-      <a class="navbar-brand" href="#">CleanNote</a>
-     </div>
-      <ul class="nav navbar-nav pull-right">
-	<li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
-	<li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Logout</a></li>
-	<li ng-hide="isLoggedIn()"><a href="/#/login">Login</a></li>
-	<li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
-      </ul>
-    </div>
+  <body ng-app="cleannote" ng-controller="MainCtrl">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="mynav">
+	<div class="container">
+    	  <div class="navbar-header">
+    	    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+    	    </button>
+    	    <a class="navbar-brand" href="#">ClearNote</a>
+    	  </div>
+    	  <div class="collapse navbar-collapse" id="myNavbar">
+    	    <ul class="nav navbar-nav navbar-right">
+    	      <li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
+    	      <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Logout</a></li>
+    	      <li ng-hide="isLoggedIn()"><a href="/#/login">Login</a></li>
+    	      <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
+    	    </ul>
+    	  </div>
+	</div>
+      </div>
     </nav>
-
-    <div class="row">
-      <div class="col-md-12">
-	<ui-view></ui-view>
+    <div class="container-fluid view-container">
+      <div class="row">
+	<div class="col-md-12">
+	  <ui-view></ui-view>
+	</div>
       </div>
     </div>
-
     <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
