NavCtrl Error fixed

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
     <style> .glyphicon-thumbs-up { cursor:pointer } </style>
   </head>
   <body ng-app="cleannote" ng-controller="MainCtrl">
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" ng-controller="NavCtrl">
       <div class="mynav">
 	<div class="container">
     	  <div class="navbar-header">
