Home All Course population and CleanNote Logo Added

--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,10 @@
 	      <span class="icon-bar"></span>
 	      <span class="icon-bar"></span>
     	    </button>
-    	    <a class="navbar-brand" href="#">ClearNote</a>
+    	    <a class="navbar-brand" href="#">
+	      <img src="images/logo.png" style="width:40px; height:40px; margin-top: -10px; display: inline-block">
+	      CleanNote
+	    </a>
     	  </div>
     	  <div class="collapse navbar-collapse" id="myNavbar">
     	    <ul class="nav navbar-nav navbar-right">
