--- a/client/index.html
+++ b/client/index.html
@@ -57,20 +57,23 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <!-- endinject -->
+    <script src="bower_components/socket.io-client/socket.io.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- inject:js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers/auth.js"></script>
-    <script src="js/controllers/cards.js"></script>
-    <script src="js/controllers/main.js"></script>
-    <script src="js/controllers/nav.js"></script>
-    <script src="js/controllers/section.js"></script>
     <script src="js/services/auth.js"></script>
     <script src="js/services/cards.js"></script>
     <script src="js/services/sections.js"></script>
+    <script src="js/services/socket.js"></script>
     <script src="js/services/todos.js"></script>
     <script src="js/services/users.js"></script>
+    <script src="js/controllers/auth.js"></script>
+    <script src="js/controllers/cards.js"></script>
+    <script src="js/controllers/chat.js"></script>
+    <script src="js/controllers/main.js"></script>
+    <script src="js/controllers/nav.js"></script>
+    <script src="js/controllers/section.js"></script>
     <!-- endinject -->
   </body>
 </html>
